# langchain-textual

./: README.md  pyproject.toml
.github/workflows/: publish.yml
blogs/: announcing-langchain-textual-option2.md  announcing-langchain-textual.md
examples/: README.md  agent.py  pyproject.toml
langchain_textual/: __init__.py  tools.py
tests/integration_tests/: test_redact.py  test_standard.py
tests/unit_tests/: test_imports.py  test_standard.py
